Fix color contrast and minor bugs

--- a/app/assets/stylesheets/avalon.scss
+++ b/app/assets/stylesheets/avalon.scss
@@ -177,7 +177,7 @@ div.alert-danger {
   font-family: $museoSlab;
 }
 .sub-headline {
-  color: $secondary;
+  color: $blueGreen;
   font-family: $museoSlab;
 }
 
